--- a/currency-converter/package.json
+++ b/currency-converter/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-json-modules lib",
+    "start": "node  lib",
     "start-debug": "nodemon  src/index.ts",
     "start-dev": "ts-node src/index.ts",
     "build": "tsc ",
@@ -15,12 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "chalk": "^5.1.2",
     "chalk-animation": "^2.0.3",
     "figlet": "^1.5.2",
     "inquirer": "^9.1.4",
     "inquirer-autocomplete-prompt": "^3.0.0",
-    "ora": "^6.1.2"
+    "ora": "^6.1.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/chalk-animation": "^1.6.1",
@@ -28,6 +30,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/inquirer-autocomplete-prompt": "^3.0.0",
     "@types/node": "^18.11.9",
+    "@types/request": "^2.48.8",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
