--- a/currency-converter/package.json
+++ b/currency-converter/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "currency-converter",
+  "name": "@jahanzaib-tayyab/currency-converter",
   "version": "1.0.0",
-  "description": "",
+  "description": "Real time currency converter",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "currency-converter": "bin/index.js"
+  },
   "scripts": {
     "start": "node  lib",
     "start-debug": "nodemon  src/index.ts",
@@ -12,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jahanzaib Tayyab",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
@@ -33,5 +36,12 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JahanzaibTayyab/typescript-Assigments/tree/main/currency-converter"
   }
 }
