--- a/ATM/package.json
+++ b/ATM/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@jahanzaib-tayyab/atm",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "atm": "index.js"
+    "atm": "lib/index.js"
   },
   "scripts": {
     "start": "node lib",
