--- a/Todo/package.json
+++ b/Todo/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@jahanzaib-tayyab/todo",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "todo": "bin/index.js"
+    "todo": "lib/index.js"
   },
   "scripts": {
     "start": "node lib",
